@@ -6,6 +6,9 @@ Revision history for Perl extension POE::Devel::Benchmarker
 	Added automatic "pick up where we left off" to the benchmarker
 	Added the freshstart option to benchmark()
 	Tweaked the GetPOEdists sub so it will work in the "work directory" and in the poedists dir
+	Tweaked the YAML output so it's smaller
+	Removed POE::Loop::Wx from autoprobing ( I'm unable to get it to work )
+	Hardcoded the Benchmarker routines to skip POE < 0.13 ( I'm unable to get it to work )
 
 * 0.03
 
